--- a/packages/.prettierrc.json
+++ b/packages/.prettierrc.json
@@ -3,5 +3,7 @@
   "doubleQuote": true,
   "trailingComma": "es5",
   "printWidth": 80,
-  "tabWidth": 2
+  "tabWidth": 2,
+
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
