--- a/.github/test.yml
+++ b/.github/test.yml
@@ -11,6 +11,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: packages
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
