--- a/.github/test.yml
+++ b/.github/test.yml
@@ -13,7 +13,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: packages
+        working-directory: portfolio
 
     steps:
       - name: Checkout code
