--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: packages
+        working-directory: portfolio
 
     steps:
       - name: Checkout code
