--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,14 +4,12 @@ on:
   workflow_dispatch:
   pull_request:
     branches: [main, development]
+  push:
+    branches: [main, development]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: portfolio
 
     steps:
       - name: Checkout code
